Selection bar now expands vertically when too many filters added (width always 100% now to prevent horizontal scrolling

--- a/static/viewer.css
+++ b/static/viewer.css
@@ -2,18 +2,19 @@ body {
 	margin:0;
 	font-family:verdana;
 }
-
 .box_wrapper {
-	float:left;
-	height:100%;
+	height:50%;
 	overflow:hidden;
 	width:20%;
+	display:inline-block;
+	margin-right:-4px;
+	font-size:16px;
 }
 .selection_box {
 	height:100%;
 	width:100%;
 	overflow:auto;
-	padding-right: 15px;
+	padding-right: 20px;
 }
 .task {
 	display:block;
@@ -35,15 +36,13 @@ body {
 	text-align:center;
 }
 #selection_bar {
-	top:0px;
-	left:0px;
 	width:100%;
-	height:50%;
+	/*height:50%;*/
+	/*overflow-y:hidden;*/
+	overflow-x:auto;
+	font-size:0;
 }
 #task_select {
-	display:inline-block;
-	vertical-align:top;
-	overflow:hidden;
 }
 #task_select select {
 	padding:10px; margin:-5px -20px -5px -5px;
